--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "embla-carousel": "^8.0.2",
     "embla-carousel-class-names": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.1.7",
     "gsap": "^3.12.5",
     "next": "14.1.4",
     "react": "^18",
